; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.5/src/extr_lcorolib.c_luaB_coresume.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.5/src/extr_lcorolib.c_luaB_coresume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_coresume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_coresume(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @getco(i32* %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @lua_gettop(i32* %10)
  %12 = sub nsw i64 %11, 1
  %13 = call i32 @auxresume(i32* %8, i32* %9, i64 %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @lua_pushboolean(i32* %17, i32 0)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @lua_insert(i32* %19, i32 -2)
  store i32 2, i32* %2, align 4
  br label %31

21:                                               ; preds = %1
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @lua_pushboolean(i32* %22, i32 1)
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %25, 1
  %27 = sub nsw i32 0, %26
  %28 = call i32 @lua_insert(i32* %24, i32 %27)
  %29 = load i32, i32* %5, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %21, %16
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32* @getco(i32*) #1

declare dso_local i32 @auxresume(i32*, i32*, i64) #1

declare dso_local i64 @lua_gettop(i32*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_insert(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
